--- a/notebooks/tutorial/04_Estimating_model_parameters.ipynb
+++ b/notebooks/tutorial/04_Estimating_model_parameters.ipynb
@@ -93,7 +93,7 @@
         "| Rob       | Jane      | All other        | bad match                                             |\n",
         "| Rob       | Robert    | All other        | bad match, this comparison has no notion of nicknames |\n",
         "\n",
-        "More information about specifying comparisons can be found [here](../../topic_guides/comparisons/customising_comparisons.ipynb) and [here](../../topic_guides/comparisons/comparisons_and_comparison_levels.md).\n",
+        "More information about specifying comparisons can be found [here](https://moj-analytical-services.github.io/splink/topic_guides/comparisons/customising_comparisons.html) and [here](https://moj-analytical-services.github.io/splink/topic_guides/comparisons/comparisons_and_comparison_levels.html).\n",
         "\n",
         "We will now use these concepts to build a data linking model.\n"
       ]
